Revision history for App-Countdown

0.4.0   Thu 16 Jan 15:37:19 IST 2014
        * Implement the new syntax of "1m30s" or "1h30m50s" for delays.
        * Add examples to the bin/countdown man-page POD.

0.3.1   Tue  3 Sep 19:28:13 IDT 2013
        * Add a minimal dependency on Getopt::Long 2.36 for
        GetOptionsFromArray().

0.3.0   Sat 31 Aug 18:01:02 IDT 2013
        * Implement support for the "s" delay.
            - it kept tripping me up, so I added it.

0.2.0   Thu 15 Nov 16:21:16 IST 2012
        * Add --version, --help, and --man flags.
            - Thanks to Steven Haryanto from
            http://blogs.perl.org/users/shlomi_fish/2012/11/three-command-line-utilities.html#comments
        * Add t/unit-calc-delay.t
        * Implement support for m and h delays (plus fractional numbers).
            - Also thanks to Steven.

0.0.4   Tue 13 Nov 19:10:14 IST 2012
        URL to the repo changed to fix a typo. Updated Build.PL.

0.0.3   Tue 13 Nov 18:48:59 IST 2012
        Correct the phrasing in the POD of bin/countdown.
            - Thanks to Omer Zak for pointing it out.

0.0.2   Tue 13 Nov 18:12:54 IST 2012
        Fix a bug to accept single digit numbers for delays.

0.0.1   Tue 13 Nov 17:31:24 IST 2012
        First version, released on an unsuspecting world.